--- a/index.html
+++ b/index.html
@@ -2055,5 +2055,6 @@ var myapp = new Vue({
     <!-- シンタックスハイライト -->
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?skin=sons-of-obsidian"></script>
     <script src="main.js"></script>
+    <!-- test comment -->
 </body>
 </html>
